2011-09-22 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/gtk-polar-view.c
    * src/gtk-polar-view-popup.c
    Saves polarview showtrack information from one session to another.


2011-09-21 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Corrects satellite name not being updated correctly when a satellite occurs with international ID and name in same update.

    * ChangeLog
    * src/tle-update.c
    Corrects satellite status not being updated correctly when a .sat and update data have different status.


2011-09-20 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/sgpsdp/sgp_in.c
    * src/tle-update.c
    * src/gtk-sat-data.c
    Eliminate segfaults for some .sat file corruption.


2011-09-19 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Process bare tle's based on checksums.


2011-09-18 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Speed up tle-update by updating the gui less frequently.


2011-09-18 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/qth-data.c
    Remove error message if latitude, longitude, or altitude is zero.


2011-09-07 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Update progress bar calculation for tle update.


2011-09-07 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Save status for new satellites.


2011-09-04 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * src/tle-update.c
    Cleanup comments and code with satellite status updates.


2011-09-01 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog
    * NEWS
    * src/tle-update.c
    * src/tle-update.h
    * src/gtk-sat-data.c
    Tracks operational status through tle-update and stores it in .sat files when available.
    Fixes Bug 3400534: Operational Status


2011-08-26 Charles Suprin <hamaa1vs at gmail.com>

    * ChangeLog