@@ -458,6 +458,11 @@ rgba2html (guint rgba)
      return col;
 }
 
+/** \brief String comparison function
+ *  \param s1 first string
+ *  \param s2 second string
+ */
+
 int gpredict_strcmp (const char *s1, const char *s2) {
 #if 0
 
@@ -475,6 +480,16 @@ int gpredict_strcmp (const char *s1, const char *s2) {
 #endif 
 }
 
+
+/** \brief substring finding function
+ *  \param s1 the larger string
+ *  \param s2 the substring that we are searching for.
+ *  \return pointer to the substring location
+ *  
+ *  this is a substitute for strcasestr which is a gnu c extension and not available everywhere.
+ */
+
+
 char * gpredict_strcasestr(const char *s1, const char *s2)
 {
 	size_t s1_len = strlen(s1);
@@ -488,4 +503,84 @@ char * gpredict_strcasestr(const char *s1, const char *s2)
 	}
 
 	return NULL;
+}
+
+/** \brief Save a GKeyFile structure to a file
+ *  \param cfgdata is a pointer to the GKeyFile.
+ *  \param filename is a pointer the filename string.
+ *  \return 1 on error and zero on success.
+ *  This might one day be in glib but for now it is not a standard function.
+ *  Variants of this were throughout the code and it is now consilidated here.
+ */
+
+gboolean gpredict_save_key_file (GKeyFile *cfgdata, const char *filename) {
+    gchar      *datastream;    /* cfgdata string */    
+    gsize       length;        /* length of the data stream */
+    gsize       written;       /* number of bytes actually written */
+    gboolean    err = 0;       /* the error value */
+    GIOChannel *cfgfile;       /* file */
+    GError     *error = NULL;  /* Error handler */
+        
+    /* ok, go on and convert the data */
+    datastream = g_key_file_to_data (cfgdata, &length, &error);
+    
+    if (error != NULL) {
+        sat_log_log (SAT_LOG_LEVEL_ERROR,
+                     _("%s: Could not create config data (%s)."),
+                     __FUNCTION__, error->message);
+        
+        g_clear_error (&error);
+        
+        err = 1;
+    } else {
+        cfgfile = g_io_channel_new_file (filename, "w", &error);
+        
+        if (error != NULL) {
+            sat_log_log (SAT_LOG_LEVEL_ERROR,
+                         _("%s: Could not create config file (%s)."),
+                         __FUNCTION__, error->message);
+            
+            g_clear_error (&error);
+            
+            err = 1;
+        }
+        else {
+            g_io_channel_write_chars (cfgfile,
+                                      datastream,
+                                      length,
+                                      &written,
+                                      &error);
+            
+            g_io_channel_shutdown (cfgfile, TRUE, NULL);
+            g_io_channel_unref (cfgfile);
+            
+            if (error != NULL) {
+                sat_log_log (SAT_LOG_LEVEL_ERROR,
+                             _("%s: Error writing config data (%s)."),
+                             __FUNCTION__, error->message);
+                
+                g_clear_error (&error);
+                
+                err = 1;
+            }
+            else if (length != written) {
+                sat_log_log (SAT_LOG_LEVEL_WARN,
+                             _("%s: Wrote only %d out of %d chars."),
+                             __FUNCTION__, written, length);
+                
+                err = 1;
+            }
+            else {
+                sat_log_log (SAT_LOG_LEVEL_MSG,
+                             _("%s: Configuration saved for %s."),
+                             __FUNCTION__, filename);
+                
+                err = 0;
+            }
+        }
+    }
+    g_free (datastream);
+
+    return err;
+    
 }
