@@ -5,6 +5,17 @@
     * src/gtk-polar-view-popup.c
     Saves polarview showtrack information from one session to another.
 
+    * ChangeLog
+    * src/first-time.c
+    * src/gpredict-utils.c
+    * src/gpredict-utils.h
+    * src/mod-cfg.c
+    * src/qth-data.c
+    * src/radio-conf.c
+    * src/rotor-conf.c
+    * src/sat-cfg.c
+    * src/tle-update.c
+    Unifies saving glib key file routine into one place instead of eight.
 
 2011-09-21 Charles Suprin <hamaa1vs at gmail.com>
 
